--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -9,43 +9,45 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             >
-        <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Sensor Read Application"
-                />
-        <!-- debug use only
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Next Screen >>"
-                android:onClick="gotoNextScreen"
-                />
-        -->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
 
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Get List"
-                android:onClick="getDeviceSensorList"
-                android:background="?android:attr/selectableItemBackground"
-                />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Sensor Read Application"
+                    android:gravity="center"
+                    />
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Get List"
+                    android:onClick="getDeviceSensorList"
+                    android:background="?android:attr/selectableItemBackground"
+                    />
+
+            </LinearLayout>
+
         <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="List of Sensors:"
                 android:id="@+id/SensorLog"/>
-        <LinearLayout
+
+        <ScrollView
                 android:id="@+id/layout_box"
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 >
             <!-- left empty for appending -->
-        </LinearLayout>
+        </ScrollView>
 
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
 
