--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,50 +4,59 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
+
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            >
-        <LinearLayout
             android:orientation="horizontal"
+            android:layout_gravity="bottom"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             >
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Sensor Read Application"
-                    android:gravity="center"
-                    />
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Get List"
-                    android:onClick="getDeviceSensorList"
-                    android:background="?android:attr/selectableItemBackground"
-                    />
-
-            </LinearLayout>
-
         <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Sensor Read Application"
+                android:gravity="center"
+                />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?android:attr/dividerVertical"
+                android:layout_marginLeft="4dip"
+                android:layout_marginRight="4dip"
+                android:layout_alignParentTop="true"
+                />
+        <Button
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="List of Sensors:"
-                android:id="@+id/SensorLog"/>
-
-        <ScrollView
-                android:id="@+id/layout_box"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                >
-            <!-- left empty for appending -->
-        </ScrollView>
-
+                android:layout_height="match_parent"
+                android:text="Get List"
+                android:onClick="getDeviceSensorList"
+                android:background="?android:attr/selectableItemBackground"
+                />
 
     </LinearLayout>
+
+
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="List of Sensors:"
+            android:id="@+id/SensorLog"/>
+
+    <ScrollView
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/layout_box"
+                />
+
+        <!-- left empty for appending -->
+    </ScrollView>
 
 </LinearLayout>
 
